Fixed spacing and formatting issues for webpage layout and began writing media screen properties for max-width 1000px, 800px, and 628px.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 header {
-    padding: px;
     font-family: 'Numans', sans-serif;
     background-color:rgb(50, 50, 93);
     color:white;
@@ -37,12 +36,12 @@ color: white;
 
 .background {
     display:flex;
-    height: 130px;
+    height: 100px;
 }
 
 .background img {
     object-fit:cover;
-    height: 130px;
+    height: 100px;
     width: 2000px;
 }
 
@@ -84,14 +83,6 @@ color: white;
     color: rgb(50, 50, 93);
 }
 
-#contacts {
-    display:flex;
-    justify-content:space-between;
-}
-
-#contacts a {
-    color: rgb(50, 50, 93);
-}
 
 .project a  {
     position: relative;
@@ -117,11 +108,11 @@ color: white;
 }
 
 .projects .grid {
- display: grid;
- column-gap: 5px;
- row-gap: 5px;
- grid-template-columns: auto auto;
- margin: 0 0;
+    display: grid;
+    column-gap: 5px;
+    row-gap: 5px;
+    grid-template-columns: auto auto;
+    margin: 0 0;
 }
 
 .projects .grid article {
@@ -129,7 +120,7 @@ color: white;
 }
 
 .projects .grid article img {
-    width: 150px;
+    width: 225px;
     height: 150px;
     object-fit: cover;
     grid-template-columns: fit-content(100%) fit-content(100%) 1fr;
@@ -137,4 +128,77 @@ color: white;
 
 .projects .grid article {
     width: 90%;
+}
+
+#contacts a {
+    color: rgb(50, 50, 93);
+}
+
+address {
+    display:flex;
+    justify-content:space-between;
+    margin-right: 12%;
+}
+
+@media screen and (max-width: 1000px) {
+
+    .projects {
+        flex-direction: column;
+    }
+
+
+}   
+
+@media screen and (max-width: 800px) {
+    #About-Me .me {
+        width: 100%;
+    }
+
+    #About-Me,
+    #Work,
+    #Contact-Me {   
+        flex-direction: column;
+        margin: 15px 0;
+    }
+    .left {
+        width: 100%;
+        text-align: center;
+    }
+    .right {
+        margin: 0 auto 0 auto;
+        border: none;
+    }
+    .large {
+        margin: 0 auto 0 auto;
+    }
+    .large article img {
+        width: 100%;
+    }
+    .grid article img {
+        width: 100%;
+    }
+    .projects .grid article {
+        width: 100%;
+    }
+    .grid {
+        justify-content: center;
+    }
+    .grid article {
+        width: 100%;
+    }
+
+    address {
+        margin: 15px 0;
+    }
+}
+
+@media screen and (max-width: 628px) {
+    .grid {
+        grid-template-columns: auto !important;
+    }
+    .projects .grid article img, .projects .grid article {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
